--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/sinon": "^10.0.15",
     "eslint": "^8.38.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
+    "sinon": "^15.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
